correct z-index from back-to-top button

--- a/static/style.css
+++ b/static/style.css
@@ -80,5 +80,5 @@
     position: fixed;
     top: 0px;
     display: none;
-    z-index: 9999;
+    z-index: 1;
 }
